# KevS-RacingClient

./: .gitignore  .gitmodules  CMakeLists.txt  CarWrapper.cpp  CarWrapper.h  Data_Handler.cpp  Data_Handler.h  DoomWheel.cpp  DoomWheel.h  IRSDK_Handler.cpp  IRSDK_Handler.h  KevS-DoomWheel.sln  KevS-DoomWheel.vcxproj  KevS-DoomWheel.vcxproj.filters  README.md  basics.h  imgui.ini  main.cpp  settings
datatypes/: entry.h  track.h
imgui/: CMakeLists.txt
imgui/imgui_tmp/examples/example_win32_directx11/: example_win32_directx11.vcxproj
include/: defines.h  services.h
include/connection/: data_collector.h  data_sync.h  iracing_collector.h
include/datatypes/: data.h  doom_settings.h  driver.h  general_settings.h  session.h  team.h
include/ui/: DBClient.h  DoomWheel.h  Settings.h  UI_Handler.h
irsdk/: CMakeLists.txt  irsdk_defines.cpp  irsdk_defines.h
ressources/: default_imgui.ini  publish_kevs.bat
src/: main.cpp  services.cpp
src/connection/: data_collector.cpp  iracing_collector.cpp
src/datatypes/: data.cpp  driver.cpp  session.cpp  team.cpp
src/ui/: DBClient.cpp  DoomWheel.cpp  Settings.cpp  UI_Handler.cpp
ui/: DoomWheel.cpp  DoomWheel.h
