cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

project(IRSDK_LIB VERSION 1.18)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

file(GLOB SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
file(GLOB HEADERS "${PROJECT_SOURCE_DIR}/.h")

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})